Refreshed project; changed styles, added dynamic class change for reset button

--- a/src/styles/abstracts/_variables.scss
+++ b/src/styles/abstracts/_variables.scss
@@ -36,6 +36,7 @@ $font-family-default: 'Lato', sans-serif;
 /** Button colors **/
 $reset-btn: $color-grey-170;
 $reset-btn-a: $color-grey-170-70;
+$reset-btn-active: $color-yellow;
 
 /** z-index **/
 $z-modal: 100;
