--- a/src/styles/components/_search-reset.scss
+++ b/src/styles/components/_search-reset.scss
@@ -14,5 +14,9 @@
             outline: none;
             background-color: $reset-btn-a;
         }
+        &--active {
+            cursor: pointer;
+            background-color: $reset-btn-active;
+        }
     }
 }
