--- a/src/styles/components/_sort-panel.scss
+++ b/src/styles/components/_sort-panel.scss
@@ -1,6 +1,7 @@
 .sort-panel{
     border-bottom: 1px solid $color-border-grey;
     &__options{
+        cursor: pointer;
         padding: 0px;
       
     }
