--- a/src/styles/layout/_main-wrapper.scss
+++ b/src/styles/layout/_main-wrapper.scss
@@ -1,3 +1,10 @@
-.main-wrapper{
+.main-wrapper {
     position: relative;
+    margin: 0 20px;
+}
+
+@media (min-width: $breakpoint-large){
+    .main-wrapper {
+    margin: 0 30px
+    }
 }
